--- a/dishmap/src/main/res/layout/dialog_grap_table_winner.xml
+++ b/dishmap/src/main/res/layout/dialog_grap_table_winner.xml
@@ -5,6 +5,15 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/dialog_grap_table_result_close_iv"
+        android:layout_width="@dimen/x70"
+        android:layout_height="@dimen/y70"
+        android:layout_gravity="right"
+        android:src="@mipmap/dishmap_luck_close"
+        android:scaleType="fitXY"
+        />
+
     <LinearLayout
         android:layout_width="@dimen/x606"
         android:layout_height="@dimen/x734"
@@ -37,9 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-
-            >
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -81,25 +88,23 @@
                     android:layout_height="wrap_content"
                     android:includeFontPadding="false"
                     android:textColor="@color/text_red_3"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/big_text_size_2"
                     android:text=""
                     />
 
             </RelativeLayout>
 
-
-
-
         </LinearLayout>
-
 
     </LinearLayout>
 
+
     <ImageView
-        android:id="@+id/dialog_grap_table_result_close_iv"
-        android:layout_width="@dimen/x70"
-        android:layout_height="@dimen/y227"
-        android:src="@mipmap/grap_table_close"
+        android:id="@+id/dialog_grap_table_result_use_now_iv"
+        android:layout_marginTop="@dimen/y80"
+        android:layout_width="@dimen/x254"
+        android:layout_height="@dimen/y84"
+        android:src="@mipmap/dishmap_use_now"
         android:scaleType="fitXY"
         />
 
