--- a/dishmap/src/main/res/layout/activity_chat.xml
+++ b/dishmap/src/main/res/layout/activity_chat.xml
@@ -26,6 +26,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/activity_chat_remain_minutes"
                 android:layout_width="@dimen/x49"
                 android:layout_height="@dimen/y46"
                 android:textSize="@dimen/big_text_size"
@@ -44,6 +45,7 @@
                 android:text="分"/>
 
             <TextView
+                android:id="@+id/activity_chat_remain_seconds"
                 android:layout_width="@dimen/x49"
                 android:layout_height="@dimen/y46"
                 android:gravity="center"
