修改手机号显示问题

--- a/dishmap/src/main/res/layout/fragment_user_mine.xml
+++ b/dishmap/src/main/res/layout/fragment_user_mine.xml
@@ -64,6 +64,7 @@
                 android:layout_marginTop="@dimen/y15"
                 android:paddingTop="@dimen/x3"
                 android:includeFontPadding="false"
+                android:visibility="invisible"
                 android:paddingBottom="@dimen/x3"
                 android:paddingLeft="@dimen/x8"
                 android:paddingRight="@dimen/x8"
