添加倒计时

--- a/dishmap/src/main/res/layout/activity_chat.xml
+++ b/dishmap/src/main/res/layout/activity_chat.xml
@@ -65,6 +65,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/activity_chat_remain_time_lll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
