呼啦圈列表页如文字太长的情况下，太接近边缘且会与新消息提醒重合

--- a/dishmap/src/main/res/layout/activity_message_lv_item.xml
+++ b/dishmap/src/main/res/layout/activity_message_lv_item.xml
@@ -41,6 +41,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/y25"
                 android:includeFontPadding="false"
+                android:layout_marginRight="@dimen/x10"
+                android:singleLine="true"
                 android:text=""
                 android:textColor="@color/text_gray_3"
                 android:textSize="@dimen/small_text_size" />
