--- a/dishmap/src/main/res/layout/fragment_user_mine.xml
+++ b/dishmap/src/main/res/layout/fragment_user_mine.xml
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/y26"
-                android:text="0"
+                android:text=""
                 android:includeFontPadding="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/big_text_size" />
